crates/kirin-derive-dialect/src/property/snapshots/kirin_derive_dialect__property__tests__enum_wrapper.snap
---
source: crates/kirin-derive-dialect/src/property/tests.rs
expression: "case!\n{\n    #[kirin(type_lattice = Lattice, constant)] #[wraps] enum MyEnum<T>\n    { VariantA { inner: InnerStructA<T> }, VariantB(InnerStructB), }\n}"
---
#[automatically_derived]
impl<T> ::kirin::ir::IsConstant for MyEnum<T> {
    fn is_constant(&self) -> bool {
        match self {
            Self::VariantA { inner } => {
                <InnerStructA<T> as ::kirin::ir::IsConstant>::is_constant(inner)
            }
            Self::VariantB(field_0) => {
                <InnerStructB as ::kirin::ir::IsConstant>::is_constant(field_0)
            }
        }
    }
}
